# xuan-flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  run_api.py  test_api.py  verify_module1.py
docs/: memory-system-optimization-requirements.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatArea.tsx  FilePreview.tsx  Sidebar.tsx
skills/public/deep-research/: SKILL.md
skills/public/text-utils-basic/: SKILL.md  config.yaml
xuan_flow/: __init__.py
xuan_flow/agents/: __init__.py  lead_agent.py  thread_state.py
xuan_flow/agents/middlewares/: __init__.py  memory_middleware.py
xuan_flow/api/: __init__.py  app.py
xuan_flow/api/routers/: __init__.py  chat.py  management.py  workspace.py
xuan_flow/config/: __init__.py  app_config.py
xuan_flow/mcp/: __init__.py  cache.py  client.py  tools.py
xuan_flow/memory/: __init__.py  prompt.py  store.py  updater.py
xuan_flow/models/: __init__.py  factory.py
xuan_flow/skills/: __init__.py  loader.py  parser.py  runtime.py  types.py
xuan_flow/subagents/: __init__.py  config.py  executor.py  registry.py
xuan_flow/subagents/builtins/: __init__.py
xuan_flow/tools/: __init__.py  clarification_tool.py  file_tools.py  image_inspector.py  registry.py  skill_creator.py  skill_runner.py  task_management.py  task_tool.py  web_fetch.py  web_search.py
xuan_flow/utils/: trace_logger.py
(+1 files in other folders)
