[project]
name = "xuan-flow"
version = "0.1.0"
description = "A lightweight LangGraph-based Multi-Agent framework inspired by DeerFlow"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.3",
    "requests>=2.32.0",
    "pymysql>=1.1.1",
    "langchain-mcp-adapters>=0.1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xuan_flow*"]
